fix api spec
